syntax = "proto3";

package grpc;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "dev.vietnq.grpc";

service DoctorService {
  rpc getAllDoctor(google.protobuf.Empty) returns (stream Doctor) {};
  rpc createDoctor(Doctor) returns (stream Doctor) {};
}

message Doctor {
  string id = 1;
  string name = 2;
  int32 age = 3;
}